# dscc

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  spark-test.yml
apps/: index.yaml
docker/: Dockerfile  Dockerfile.spark  Dockerfile.web
dscc/: cli.py
frontend/: build.py
frontend/static/: detections.json  logout.js
frontend/templates/: 404.html  base.html  index.html  login.html  status.html  submissions.html  upload_form.html
jobs/: worker.py
scripts/: test_detection.py  validate_index_yaml.py
spark/: main.py
submission_store/jobs/: 04785470-d4d7-40bb-bca8-c34dc6ccb873.json  0c533b76-2566-4bec-816c-7812edb3d09a.json  13357d6f-a6b2-4756-84de-62b8b1d2fd14.json  14741627-fbd8-4e56-b1b1-faa8a1511ca1.json  29ff1767-0eeb-4743-add3-d513a5e7081f.json  3a650e2f-9883-4155-820e-7d7b07e09641.json  5617c66a-0da4-44d4-810c-1d9cacf0e297.json  5925e8ed-db88-44cc-b647-446ce00aac84.json  64fb8291-19fc-4610-aaa7-8a8006df0327.json  6b49c51b-20b4-43e6-b545-cf53257af84f.json  6f3b1b5e-cfb6-4521-b146-e6d723472c99.json  7323655d-b4a7-4f52-a85d-7822d9f44230.json  84bce2cc-296d-4a06-90ba-3f57f60a88d9.json  891ab94c-d943-4393-bb47-bf3e20902df0.json  8d382d55-58d3-4f8d-b801-0ccd66e8047c.json  964c0846-ec09-42e9-a978-a63445e6c5ed.json  C9016C52-613F-45AF-BB1F-076B658EBC33.json  a53a111a-851f-4c36-bb25-dcf1e9887946.json  b07f6cd8-3b68-4edb-9e78-adb377bddf47.json  ba8f283a-f755-4a62-b426-30930e7e9f3a.json  ca9ad284-3ce1-4a9f-9da5-9d38c72072f2.json  cda5f681-0619-4ca5-9bd1-e74406da207e.json  (+7 more)
web/: main.py
(+7 files in other folders)
